[metadata]
name = git-commits-lines-graph
version = 1.0.0
author = Daniel Fleischer
author_email = danflscr@gmail.com
description = Git commit lines graph
long_description = Long Text
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielfleischer/git-commits-lines-graph
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options.entry_points]
console_scripts =
    git-lines-graph = git_lines_graph.main:main

[options]
packages = find:
python_requires = >=3.6
